themes/default/scss/primeng/theme.scss
/* ... */
.ui-inputtext:-ms-input-placeholder { /* IE 10+ */
  color: $kGrayscale3;
}
.ui-inputtext:-moz-placeholder { /* Firefox 18- */
  color: $kGrayscale3;
}

/* checkboxes */
.ui-chkbox .ui-chkbox-box, .ui-datatable .ui-selection-column .ui-chkbox-box{
  width: 16px;
  height: 16px;
  border: 1px solid $kGrayscale4;
  border-radius: 3px;
  font-size: 10px;
  &.ui-state-active{
    background-color: $kPrimary;
    border: 1px solid $kPrimary;
    color: #ffffff;
  }
  .ui-chkbox-icon{
    margin-left: 0px;
    margin-top: 0px;
    line-height: 14px;
  }
}
.ui-chkbox-box:not(.ui-state-disabled):not(.ui-state-active):hover{
  border: 1px solid $kGrayscale4;
}
/* radio buttons */
.ui-radiobutton-box.ui-state-active{
  background-color: $kPrimary;
  border: 1px solid $kPrimary;
  color: #ffffff;
}
.ui-radiobutton-icon.fa-circle{
  margin-top: 3px;
  line-height: 10px !important;
}

/* data table */
.ui-datatable thead th, .ui-datatable tfoot td, .ui-datatable tbody td, .ui-datatable-data.ui-widget-content {
  border-left: none;
  border-right: none;
}
.ui-datatable th.ui-state-default{
  text-align: left;
  border: none;
  background: transparent;
}
.ui-datatable tbody > tr.ui-widget-content {
  height: 70px;
  border-left: none;
  border-right: none;
  &:first-child{
    border-top: 1px solid #ffffff;
  }
}
.noResults .ui-datatable tbody > tr.ui-widget-content {
  border: 1px solid white;
}
.ui-widget-header.ui-datatable-scrollable-header{
  background: transparent;
  height: 40px;
  border-top: 1px solid #d9d9d9;
  border-left: none;
  border-right: none;
  tr{
    height: 40px;
    border-left: none;
    border-right: none;
    border-top: 0px solid #ffffff;
  }
}
.ui-datatable .ui-datatable-thead>tr>th{
  border-left: none;
  border-right: none;
  font-weight: bold;
}
.ui-datatable th.ui-state-default{
  font-size: 13px;
  font-weight: 400;
  color: $kGrayscale3;
  outline: none;
  text-overflow: ellipsis;
}
.ui-datatable th.ui-state-active {
  color: $kGrayscale1;
}
.ui-datatable .ui-cell-data{
  font-size: 15px;
  font-weight: 400;
  color: $kGrayscale3;
  text-overflow: ellipsis;
}
.ui-datatable .ui-datatable-data tr.ui-state-highlight{
  background-color: #ffffff;
  cursor: auto;
}

.ui-sortable-column-icon.fa.fa-sort{
  visibility: hidden;
  &.fa-sort-asc, &.fa-sort-desc{
    font-size: 10px;
    margin-left: 8px;
    visibility: visible;
  }
}
.ui-datatable .ui-datatable-data>tr>td{
  border: 0px solid #ffffff;
  overflow: hidden;
}
.ui-datatable .ui-datatable-scrollable-body{
  border-top: 1px solid #d9d9d9;
}
td.ui-datatable-emptymessage{
  text-align: center;
  line-height: 200px;
  font-size: 28px;
  color: $kGrayscale3;
}

.ui-datatable .ui-datatable-data tr.uploadFailure{
  background: lighten($kDandger, 45%);
}

.ui-datatable .ui-datatable-data tr.uploading{
  background: repeating-linear-gradient(
                  -75deg,
                  #ffffff,
                  #ffffff 15px,
                  $kGrayscale7 15px,
                  $kGrayscale7 30px
  );
  background-attachment: fixed;

  -webkit-animation:progress 2s linear infinite;
  -moz-animation:progress 2s linear infinite;
  -ms-animation:progress 2s linear infinite;
  animation:progress 2s linear infinite;
}

@-webkit-keyframes progress{
  0% {
    background-position: 0 0;
  }
  100% {
    background-position: -60px 0px;
  }
}
@-moz-keyframes progress{
  0% {
    background-position: 0 0;
  }
  100% {
    background-position: -60px 0px;
  }
}
@-ms-keyframes progress{
  0% {
    background-position: 0 0;
  }
  100% {
    background-position: -60px 0px;
  }
}
@keyframes progress{
  0% {
    background-position: 0 0;
  }
  100% {
    background-position: -60px 0px;
  }
}

/* buttons */
.ui-button{
  font-weight: 700;
  border-radius: 3px;
}
.disabled{
  color: $kGrayscale4;
  background: transparent;
  border: 1px solid $kGrayscale4;
  cursor: none;
}
.ui-button.kButtonBranded {
  &.ui-state-default {
    color: #ffffff;
    background: $kPrimary;
  }
  &:hover {
    background: darken($kPrimary, 10%);
  }
  &:active {
    box-shadow: inset 0px 1px 3px 0 rgba(0, 0, 0, 0.50);
  }
  &:disabled {
    color: $kGrayscale4;
    background: transparent;
    border: 1px solid $kGrayscale4;
    cursor: none;
    box-shadow: none;
  }
}
.ui-button.kButtonDefault {
  &.ui-state-default{
    color: $kGrayscale1;
    background: #ffffff;
    border: 1px solid $kGrayscale4;
    height: 34px;
  }
  &:hover{
    color: $kPrimary;
  }
  &:active:not(:disabled){
    box-shadow: inset 0px 1px 3px 0 rgba(0,0,0,0.50);
  }
  &:disabled{
    color: $kGrayscale4;
    background: transparent;
    border: 1px solid $kGrayscale4;
    cursor: none;
  }
}
.ui-button.kButtonDanger {
  &.ui-state-default{
    height: 34px;
    color: #ffffff;
    background: $kDandger;
    border: 0px solid $kDandger;
  }
  &:hover{
    background: darken($kDandger, 10%);
    border: 0px solid darken($kDandger, 10%);
  }
  &:active:not(:disabled){
    box-shadow: inset 0px 1px 3px 0 rgba(0,0,0,0.50);
  }
  &:disabled{
    @extend .disabled;
  }
}

/* menu */
.ui-tieredmenu, .ui-menu-list {
  padding-left: 0px;
  padding-right: 0px;
  .ui-menuitem-link{
    padding-left: 12px;
  }
  .ui-menuitem .ui-menuitem-link:hover{
    background-color: $kGrayscale7;
  }
}
body .ui-tieredmenu.ui-menu {
  width: 250px;
  .ui-submenu-icon {
    font-size: 10px;
    margin-top: 3px;
  }
}

/* paginator */
.ui-paginator.ui-widget-header.ui-unselectable-text{
  background: transparent;
  border: none;
}
.ui-paginator-element{
  color: $kGrayscale2;
  font-weight: 400;
  outline: none;
}
.ui-paginator-page.ui-paginator-element{
  border-radius: 0px;
}
.ui-paginator .ui-paginator-pages, .ui-paginator .ui-paginator-page, .ui-paginator .ui-paginator-next, .ui-paginator .ui-paginator-prev, .ui-paginator .ui-paginator-first, .ui-paginator .ui-paginator-last{
  color: $kGrayscale2;
  font-weight: 400;
  margin-left: 0px;
  margin-right: 0px;
}
/* ... */

